<resources>
    <string name="app_name">Walking Group</string>
    <string name="title_activity_maps">Map</string>
    <string name="apikey">BB23730A-C1B3-4B65-855E-C538EE7143FDC</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAstZSvx1HnOVI8YW4fIHpMJXx888wTInc</string>
    <string name="signup">Sign Up</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="name">Name</string>
    <string name="name_hint">Jane Doe</string>
    <string name="email">Email</string>
    <string name="email_hint">jane@example.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="walking_group_caps">WALKING GROUP</string>
    <string name="signup_label">New User?</string>
    <string name="login_label">Existing User?</string>
    <string name="login">Login</string>
    <string name="login_caps">LOGIN</string>
    <string name="preferences">Preferences</string>
    <string name="monitor_add_user_label">Add User to Monitor</string>
    <string name="add_user">Add User</string>
    <string name="monitoring">Monitoring</string>
    <string name="monitored_by">Monitored By</string>
    <string name="join_group">Join Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="remove_user">Remove User</string>
    <string name="joined_group_toast">Joined group!</string>
    <string name="user_deleted_toast">User deleted!</string>
    <string name="not_leader_toast">You are not the leader!</string>
    <string name="group_members_label">Members of this group</string>
    <string name="for_leaders_and_monitors">For Leaders and Monitors</string>
    <string name="for_current_user">For current user</string>
    <string name="confirm">Confirm</string>
    <string name="create_group">Create Group</string>
    <string name="group_description">Group Description</string>
    <string name="sfu_walkers">SFU Walkers</string>
    <string name="cancel">cancel</string>
    <string name="add_meeting_location">Add a meeting location</string>
    <string name="no_meeting_location">This group doesn\'t have a meeting location to display!</string>
    <string name="meeting_location">This is a meeting location!</string>
    <string name="add_monitored_by_user">Add User to be Monitored By</string>
    <string name="unable_to_get_location">Unable to get current location!</string>
    <string name="password_check_toast">Unable to get current location!</string>
    <string name="map_request_issue_toast">You can\'t make map requests!</string>
    <string name="edited">Edited!</string>
    <string name="readme">ReadMe</string>
    <string name="back">BACK</string>
    <string name="readme_paragraph_1">1. Once you have logged in, you can click on the map to create a group for your walking activity.</string>
    <string name="instruction">Instruction:</string>
    <string name="readme_paragraph_2">2. Click one of the existed marker on the map to select the group, meanwhile, you should be able to see where is the meeting location (blue marker).</string>
    <string name="readme_paragraph_3">3. Once you have selected a group(marker) you can click the icon of people to see the information of this group.</string>
    <string name="readme_paragraph_4">4. You can enter the monitoring system by clicking the eye icon.</string>
    <string name="readme_paragraph_5">5. You can add/remove the user that you want to monitor/be monitored by typing user\'s email.</string>
    <string name="readme_paragraph_6">6. You can add/remove users by typing user\'s eamil address in the group information system.</string>
    <string name="readme_paragraph_7">7. You can always go back to your location by clicking the target icon.</string>
    <string name="readme_paragraph_8">8. You can log out by clicking the exit icon.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map_drawer">Walking Group Map</string>
    <string name="monitoring_preferences">Monitoring Preferences</string>
    <string name="get_location">Get Location</string>
    <string name="logout">Logout</string>
    <string name="view_current_groups">View Current Groups</string>
    <string name="messages">Messages</string>
    <string name="text_message_placeholder">&#60;Text Message&#62;</string>
    <string name="from_label">From:</string>
    <string name="body_label">Body:</string>
    <string name="title_activity_leader_map">Map</string>
    <string name="title_activity_parent_map">Map</string>
    <string name="select">SELECT</string>
    <string name="enter_address_city_or_zip_code">Enter address, city, or Zip Code</string>
    <string name="be_the_leader_of_this_group">Be the leader of this group</string>
    <string name="add_members">Add Members</string>
    <string name="group_names">Group Names</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="leader">Leader</string>
    <string name="parent">Parent</string>
    <string name="stop_downloading">GPS Downloading Stopped!</string>
    <string name="start_downloading">GPS Downloading Started!</string>
    <string name="your_account">Your Account</string>
    <string name="birth_year">Birth Year</string>
    <string name="birth_month">Birth Month</string>
    <string name="address">Address</string>
    <string name="home_phone">Home phone</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="current_grade">Current Grade</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="delete_account">Delete Account</string>
    <string name="birth_year_two">Birth Year:</string>
    <string name="_1998">1998</string>
    <string name="birth_month_two">Birth Month:</string>
    <string name="_2">2</string>
    <string name="cell_phonee">Cell Phone:</string>
    <string name="_123_123_1234">123 123 1234</string>
    <string name="e">Home Phone:</string>
    <string name="_123_123_12344">123 123 1234</string>
    <string name="addresss">Address:</string>
    <string name="_123_way">123 Way</string>
    <string name="current_gradee">Current Grade:</string>
    <string name="_3">3</string>
    <string name="teacher_s_name_">Teacher\'s Name:</string>
    <string name="mr_smith">Mr. Smith</string>
    <string name="emergency_contact_info">Emergency Contact Info:</string>
    <string name="call_my_mom">Call my mom!</string>
    <string name="users_monitoring">Users monitoring</string>
    <string name="emergency_contact_information_for">Emergency contact information for</string>
    <string name="create_groupp">CREATE GROUP</string>
    <string name="currently_leader_of">Currently leader of:</string>
    <string name="from">From:</string>
    <string name="jane">Jane</string>
    <string name="emergency_text">Emergency Text:</string>
    <string name="message">Message</string>
    <string name="the_message_details">The Message Details</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="send_as_emergency_text">Send as Emergency Text?</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="textview">TextView</string>
    <string name="currently_member_of">Currently member of:</string>
    <string name="readme_paragraph_9">9.To view and edit information, use the navigation drawer and click on Settings. To edit a child\'s emergency contact info, use the navigation drawer and go to Monitoring Prefrences and long click on any child you are monitoring to edit their emergency information.</string>
    <string name="readme_paragraph_10">10. As a leader, you can use the navigation drawer and select View groups, this will allow you to see the groups you are leading you can then select any group you want to get more information of and view all the members of that group. You can then click on any member to get more information about them.</string>
    <string name="readme_paragraph_11">11. As a member of any group, you can use the navigation drawer and select View groups, this will allow you to see the groups you are currently a member of, you can then select any group you want to get more information of and view all the members of that group. You can further click on any member to get more information about them.</string>
    <string name="readme_paragraph_12">12. As a parent you can view the groups your child is in by going to Monitoring prefrences in the navigation drawer. This will show you the users you are monitoring and by clcking on any of these users, you can view the groups they are in and more information about that group (Members and their emergency contact)</string>
    <string name="readme_paragraph_13">13. As a parent you can view the groups your child is in by going to Monitoring prefrences in the navigation drawer. This will show you the users you are monitoring and by clcking on any of these users, you can view the groups they are in and more information about that group (Members and their emergency contact)</string>
    <string name="readme_paragraph_14">14.As Leader, you can click on the Leader button on the main map to get to the leader dashboard/map where you can upload you location or stop uploading your location.</string>
    <string name="readme_paragraph_15">15. As a parent, you could click on the parent button on the main map which would allow you to start/stop downloading the loaction of your child.</string>
    <string name="readme_paragraph_16">16. As a member you could use the start/stop button to start/stop uploading yor location</string>
    <string name="readme_paragraph_17">17. Choose a group to walk to by clicking on the marker, and then clicking "Select". You can start uploading your GPS coordinates by clicking on "Start". Once you reach your destination, you will earn points for staying healthy!</string>
    <string name="readme_paragraph_18">18. View the current leader board from the menu. Compete with your friends to get the high score!</string>
    <string name="readme_paragraph_19">19. Once you collect enough points, you may go to the shop to buy pictures to show off with! Long click on the items on the right, and then drag them onto the sticker to buy!</string>
    <string name="readme_paragraph_20">20. As a user, you can view pending permission requests. Click on one to approve or deny the request.</string>
    <string name="readme_paragraph_21">21. As a user, you can view the history of your permission requests. This is accessible from the pending permission request screen. Click on a request to view more details!</string>
    <string name="permissions">Pending Permissions</string>
    <string name="permissions_list">Permission History</string>
    <string name="pending_permissions">Pending Permissions</string>
    <string name="pending_permissions_placeholder">&#60;Pending Permission&#62;</string>
    <string name="approved_toast">The permission request has been approved!</string>
    <string name="denied_toast">The permission request has been denied!</string>
    <string name="permission_details">Permission Details</string>
    <string name="view_all_permissions">View All Permissions</string>
    <string name="denied_by_placeholder"><![CDATA[<Denied By>]]></string>
    <string name="denied_by">Denied By</string>
    <string name="approved_by_placeholder"><![CDATA[<Approved By>]]></string>
    <string name="approved_by">Approved By</string>
</resources>