<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading">

            <TextView
                android:id="@+id/heading"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/signup_caps"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/name"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/password"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/confirm_password_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/confirm_password"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <TextView
                    android:id="@+id/birth_year_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/birth_year_two"
                    android:textColor="#000"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/birth_year_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_1998"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <TextView
                    android:id="@+id/birth_month_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/birth_month_two"
                    android:textColor="#000"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/birth_month_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_2"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/cellphone_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/cell_phonee"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cellphone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_123_123_1234"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/home_phone_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/e"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/home_phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_123_123_12344"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/address_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/addresss"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/address_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_123_way"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/current_grade_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/current_gradee"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/current_grade_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/_3"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/teachers_name_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/teacher_s_name_"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/teacher_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/mr_smith"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/emergency_info_label"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="4dp"
                    android:text="@string/emergency_contact_info"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/emergency_contact_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/call_my_mom"
                    android:imeOptions="actionDone"
                    android:inputType="textShortMessage" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <Button
                    android:id="@+id/create_account"
                    android:layout_width="150dp"
                    android:layout_height="51dp"
                    android:text="@string/signup"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_layout_input" />
            </TableRow>
        </LinearLayout>
        </ScrollView>
</android.support.constraint.ConstraintLayout>