<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="32dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/from_user_label"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/from" />
        <TextView
            android:id="@+id/from_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/jane" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_1">
        <TextView
            android:id="@+id/is_emergency_label"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/emergency_text" />
        <TextView
            android:id="@+id/is_emergency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="False" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_2">
        <TextView
            android:id="@+id/message_body_label"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/message" />
        <TextView
            android:id="@+id/message_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/the_message_details" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>