<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MonitoringPrefrences"
            android:icon="@drawable/monitoring_icon"
            android:title="@string/monitoring_prfrences" />
        <item
            android:id="@+id/getLocation"
            android:icon="@drawable/ic_gps"
            android:title="@string/get_location" />

        <item
            android:id="@+id/Drawersettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/createGroup"
            android:icon="@drawable/creategroup"
            android:title="Create Group" />

        <item
            android:id="@+id/viewGroups"
            android:icon="@drawable/ic_group_info"
            android:title="View Current Groups" />
    </group>

        <group>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </group>
</menu>