<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/title"
        android:text="@string/preferences"
        android:textSize="24dp"
        android:textColor="#000"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_user_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <TextView
            android:id="@+id/add_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/monitor_add_user_label"
            android:textSize="18dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/add_user_label">
            <EditText
                android:id="@+id/addMonitoredUserInput"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:hint="@string/email_hint"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/addMonitoredUserBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_user" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
    android:id="@+id/monitoring_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/add_user_constraint_layout" >
    <TextView
        android:id="@+id/monitoring_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoring"
        android:textSize="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <ListView
        android:id="@+id/monitoring_list"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/monitoring_list_label"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
    android:id="@+id/monitored_by_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/monitoring_constraint_layout" >
    <TextView
        android:id="@+id/monitored_by_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitored_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"/>
    <ListView
        android:id="@+id/monitored_by_list"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/monitored_by_list_label"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>